# catalyst-ci

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .spectral.yml  .sqlfluff  CONTRIBUTING.md  Earthfile  Justfile  README.md  blueprint.cue  cspell.json  flake.nix  index.html  pyrightconfig.json  ruff.toml  sitemap.xml
.config/dictionaries/: project.dic
.github/: labels.yml  sync-labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: branch-delete-cleanup.yml  branch-pages-delete.yml  build-builder-image.yml  check.yml  ci.yml  cli-release.yml  cli.yml  deploy.yml  docs.yml  dogfood.yml  markdown-check.yml  move-to-next-iteration.yml  nightly.yml  pages.yml  pages2.yml  publish.yml  qa-notify.yml  release.yml  run.yml  semantic_pull_request.yml  setup.yml  spell-check.yml  sync-labels.yml  sync-own-labels.yml  temp.yml  test.yml  update-catalyst-ci-deps.yml  update-catalyst-deps.yml  validate-own-project-fields.yml  validate-project-fields.yml
actions/: Earthfile
actions/configure-runner/: .eslintrc.yml  README.md  action.yml  package-lock.json  package.json  tsconfig.json
actions/deploy/: Earthfile  README.md  action.yml
actions/discover/: Earthfile  README.md  action.yml  package-lock.json
actions/install/: .eslintrc.yml  Earthfile  README.md  action.yml  package-lock.json  package.json
actions/merge/: Earthfile  README.md  action.yml  package-lock.json  package.json
actions/publish/: README.md  action.yml
actions/push/: README.md  action.yml  package-lock.json  package.json
actions/run/: Earthfile  README.md  action.yml  package-lock.json  package.json
actions/setup/: README.md  action.yml
actions/setup-deploy/: README.md  action.yml
architecture/: index.html
architecture/03_system_scope_and_context/: index.html
architecture/08_concepts/: index.html
branch/2024_edition/: sitemap.xml
branch/790_playwright_earthly_function/: sitemap.xml
branch/chore_update_playwright/: index.html
branch/ci_building_time_experiments/: 404.html
branch/cleanup_build_packages/: sitemap.xml
branch/disables_deployment/: sitemap.xml
branch/feat_catalyst_compression_setup/: sitemap.xml
branch/feat_deny_allow_unsound/: sitemap.xml
branch/feat_mithril_loader/: sitemap.xml
branch/feat_rustc_1_80/: sitemap.xml
branch/feat_transfer_tasks_from_previous/: sitemap.xml
branch/feat_validate_project_fields_in_prs_and_issues/: sitemap.xml
branch/fix_code_coverage_test_reports/: sitemap.xml
branch/fix_flutter_src_arch/: sitemap.xml
branch/fix_pages_action/: sitemap.xml
branch/fix_remove_broken_edge/: sitemap.xml
branch/fix_spectral_openapi_lint/: 404.html
branch/fix_update_deny_check/: sitemap.xml
branch/refs_tags_v2_10_0/: sitemap.xml
branch/refs_tags_v2_10_1/: 404.html  sitemap.xml
branch/refs_tags_v2_10_2/: sitemap.xml
cli/: Earthfile  go.mod  go.sum
cli/cmd/: main.go
docs/: Earthfile  blueprint.cue  mkdocs.yml  pyproject.toml  std-theme.yml
earthly/docs/: Earthfile  README.md  Readme.md  docker-compose.kroki.yml  pyproject.toml  start.sh
earthly/docs/common/: std-theme.yml
earthly/docs/common/javascript/: massilia-graphviz.js  mathjax.js
earthly/docs/common/macros/: __init__.py  include.py
earthly/docs/common/overrides/: cip.html
earthly/docs/dev/: local.py
earthly/docs/output/kroki/: docker-compose.yml
earthly/docs/sample/: mkdocs.yml
earthly/docs/sample/src/: index.md
earthly/docs/scripts/: build.sh  colors.sh  serve.sh
earthly/docs/services/: Readme.docs.md  Readme.md  docker-compose.kroki.yml  docker-compose.livedocs.yml  docker-compose.sitedocs.yml
earthly/rust/example/: Cargo.toml  README.md  rust-toolchain.toml  t
earthly/rust/example/.cargo/: config.toml
earthly/rust/example/benches/: benchmark.rs
earthly/rust/example/cli/src/: lib.rs
earthly/rust/example/core/src/: commands.rs  error.rs
earthly/rust/example/src/: main.rs
earthly/rust/example/tests/: integration_test.rs  test_cli.rs
earthly/rust/example/utils/: Cargo.toml
earthly/rust/example/utils/src/: app_config.rs  error.rs  logger.rs  types.rs
examples/rust/crates/foo/: Cargo.toml
examples/rust/crates/foo/benches/: benchmark.rs
examples/rust/crates/foo/src/: lib.rs  main.rs
examples/rust/crates/foo/tests/: integration_test.rs
reference/: index.html
search/: search_index.json
services/jorm-metrics-server/: Earthfile  README.md  deployment.yml  pyproject.toml
services/jorm-metrics-server/jorm_metrics_server/: client.py  main.py  scraper.py
services/jorm-metrics-server/jorm_metrics_server/metrics/: proposal_votes.py  unique_voters.py  vote_power_dist.py
services/jorm-metrics-server/jorm_metrics_server/models/: account_by_id.py  account_votes.py  account_votes_count.py  active_plans.py  proposals.py  voter.py
test/: go.mod
tools/jorm-metrics-server/: Earthfile  README.md  pyproject.toml
tools/jorm-metrics-server/jorm-metrics-server/: main.py
tools/jorm-metrics-server/jorm_metrics_server/: client.py  main.py
tools/jorm-metrics-server/jorm_metrics_server/metrics/: unique_voters.py
utilities/: README.md
utilities/cql-to-d2/: .skip_pyright  Earthfile  README.md  blueprint.cue  main.py  pyproject.toml
utilities/cql-to-d2/tests/expected_output/: test_1.d2
utilities/cql-to-d2/tests/input/: test_1.cql
utilities/dbviz/: Cargo.toml  Earthfile  README.md  cspell.json  deny.toml  rust-toolchain.toml
utilities/dbviz/.cargo/: config.toml
utilities/dbviz/src/: default_template.jinja  main.rs  opts.rs  postgresql.rs  schema.rs
utilities/earthly-cache-watcher/: Earthfile  README.md  app.service  blueprint.cue  default.conf  helper.py  main.py  pyproject.toml  requirements.txt  setup.py  watchdog.service
utilities/jorm-metrics-server/: Earthfile  README.md  blueprint.cue  deployment.yml  pyproject.toml
utilities/jorm-metrics-server/jorm_metrics_server/: scraper.py
utilities/jorm-metrics-server/jorm_metrics_server/metrics/: proposal_votes.py  voting_power.py
utilities/jorm-metrics-server/jorm_metrics_server/models/: active_plans.py  voter.py
(+1130 files in other folders)
