[project]
name = "Documentation-Tooling"
version = "0.1.0"
description = "Common Project Catalyst Documentation Tooling."
authors = [
    { name = "Joshua Gilman" },
    { name = "Steven Johnson" },
]
requires-python = "~=3.13.5"
readme = "Readme.md"
dependencies = [
    "mkdocs-material[recommended, git, imaging]==9.6.16",
    "mkdocs-minify-plugin>=0.8.0,<0.9",
    "mkdocs-redirects>=1.2.2,<2",
    "mkdocs-glightbox>=0.4.0,<0.5",
    "mkdocs-multirepo-plugin>=0.8.3,<0.9",
    "mkdocs-macros-plugin>=1.3.9,<2",
    "mkdocs-meta-manager>=1.1.0,<2",
    "mkdocs-material-adr",
    "mkdocs-awesome-pages-plugin>=2.10.1,<3",
    "mkdocs-d2-plugin>=1.6.0,<2",
    "mkdocs-graphviz>=1.5.3,<2",
]

[tool.uv]

[tool.uv.sources]
mkdocs-material-adr = { git = "https://github.com/stevenj/mkdocs-material-adr", branch = "new-id" }
