[tool.poetry]
name = "jorm-metrics-server"
version = "0.1.0"
description = "A small Prometheus exporter for aggregating Jormungandr metrics"
authors = ["Catalyst Team"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "3.12.3"
pydantic = "^2.5.3"
aiohttp = "^3.9.1"
prometheus-client = "^0.19.0"
prometheus-async = { extras = ["aiohttp"], version = "^22.2.0" }
asyncclick = "^8.1.7.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
ipython = "^8.25.0"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
