[tool.poetry]
name = "jorm-metrics-server"
version = "0.1.0"
description = "A small Prometheus exporter for aggregating Jormungandr metrics"
authors = ["Catalyst Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
