[package]
name = "dbviz"
version = "1.4.0"
authors = ["Steven Johnson"]
edition = "2018"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.12.0"
postgres = "0.19.4"
minijinja = "1.0.10"
textwrap = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.8", features = ["derive"] }
