[tool.poetry]
name = "earthly-cache-watcher"
version = "0.1.0"
description = "A file watcher to detect changes in file size"
authors = ["Catalyst Team"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
watchdog = "^6.0.0"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
