[tool.poetry]
name = "jorm-metrics-server"
version = "0.1.0"
description = "A small Prometheus exporter for aggregating Jormungandr metrics"
authors = ["Catalyst Team"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.11.3"
aiohttp = "^3.11.18"
prometheus-client = "^0.21.1"
prometheus-async = { extras = ["aiohttp"], version = "25.1.0" }
asyncclick = "^8.1.8"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
ipython = "^9.1.0"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
