[tool.poetry]
name = "jorm-metrics-server"
version = "0.1.0"
description = "A small Prometheus exporter for aggregating Jormungandr metrics"
authors = ["Catalyst Team"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13.5"
pydantic = "^2.11.7"
aiohttp = "^3.12.15"
prometheus-client = "^0.22.1"
prometheus-async = { extras = ["aiohttp"], version = "25.1.0" }
asyncclick = "^8.1.8"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
ipython = "^9.4.0"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
