[package]
name = "rust-example"
version = "0.0.1"
authors = ["Abid Omar <contact@omarabid.com>", "Steven Johnson <steven.johnson@iohk.io>"]
edition = "2021"
repository = "https://github.com/input-output-hk/catalyst-ci"
readme = "README.md"
license = "MIT"
keywords = ["cli"]
description = """
Example Rust program to test CI/CD and serve as a working example.
"""

[workspace]
members = [
    "utils",
    "cli",
    "core",
]

[features]
nightly = ["utils/nightly"]
termlog = ["utils/termlog"]
journald = ["utils/journald"]
syslog = ["utils/syslog"]

[dependencies]
utils = { path = "utils" }
cli = { path = "cli"}
# core = { path = "core" }
human-panic = "1.0.3"
better-panic = "0.3.0"
# log = "0.4.14"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
