[package]
name = "foo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version= "4.4.7", features = ["derive" ] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[test]]
name = "integration_test"
harness = false

[[bench]]
name = "benchmark"
harness = false
